# dioxus-translation-issue

./: Cargo.toml  Dioxus.toml  README.md  index.html
src/: main.rs
