[package]
name = "dioxus-translation-issue"
version = "0.1.0"
authors = ["Lukas Turcani <lukasturcani93@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "ssr"] }

# Debug
dioxus-logger = "0.5.1"
dioxus-sdk = { version = "0.5.0", features = ["i18n"] }
dioxus-web = { version = "0.5.6", features = ["hydrate"] }
serde = "1.0.210"
serde_json = "1.0.128"
unic-langid-impl = "0.9.5"

[features]
prebuild = []
